--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <%= link_to "Mon profile", edit_user_registration_path, class: "dropdown-item" %>
-                  <%= link_to "Se déconnecter", destroy_user_session_path, class: "dropdown-item" %>
+                  <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
                 </div>
               </li>
             <% else %>
