--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,2 +1,55 @@
-<h1>Events#index</h1>
-<p>Find me in app/views/events/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body>
+
+  	<!-- Jumbotron -->
+
+	<div class="jumbotron">
+	  <div class="container text-center text-white">
+	    <h1 class="display-3">Bienvenue sur notre site EventBrideLike !</h1>
+	  	<p class="lead">Ici c'est notre super site événementiel, il est chouette, non ?</p>
+      </div>
+	</div>
+
+    <!-- Alertes -->
+    
+    <% if flash[:danger] %>
+      <div class="alert alert-danger" role="alert">
+        <%= flash[:danger] %>
+      </div>
+    <% end %>
+    
+	<!-- Page d'accueil -->
+
+    <% if Event.all.empty? %>
+	  <h1>Il n'y a pas encore d'événements...</h1>
+	<% else %>
+      <h1>Voici la liste des événements à Dijon :</h1>
+	<% end %>
+	<div>
+	  <%= link_to "Créer un événement !", new_event_path, class: "btn btn-primary"%>
+	  <br><br>
+	</div>
+	<div class="card-deck">
+	  <% Event.all.each do |event| %>
+	    <div class="col-sm-4 mb-3">
+	      <div class="card">
+	        <div class="card-body">
+	          <h5 class="card-title">Titre : <%= event.title %></h5>
+	          <h6 class="card-subtitle mb-2 text-muted">Organisateur : <%= event.admin.first_name %> <%= event.admin.last_name %></h6>
+	          <p class="card-text"><%= event.description %></p>
+	          <%= link_to "Consulter", event_path(event.id), class: "btn btn-primary"%>
+	          <% if current_user && event.admin == current_user %>
+	          <%= link_to "Modifier le gossip", edit_event_path(event.id), class: "btn btn-success" %>
+	          <%= link_to "Supprimer", event_path(event.id), method: "delete", :data => {:confirm => 'Êtes-vous sûr ?'}, class: "btn btn-danger" %> 
+	          <% end %>
+	        </div>
+	      </div>
+	    </div>
+	  <% end %>
+	</div>
+  </body>
+</html>
