--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Créer un événement <span class="sr-only">(current)</span></a>
+              <%= link_to "Créer un événement", new_event_path, class: "nav-link" %>
             </li>
             <% if user_signed_in? %>
               <li class="nav-item dropdown">
@@ -28,7 +28,7 @@
                   Mon profil
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <%= link_to "Mon profile", edit_user_registration_path, class: "dropdown-item" %>
+                  <%= link_to "Mon profil", user_path(current_user.id), class: "dropdown-item" %>
                   <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
                 </div>
               </li>
