admlin in show is email

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -43,7 +43,7 @@
 
       <div class="row">
         <div class="col-lg-4">Organisateur :</div>
-        <div class="col-lg-4"><%= @event.admin.first_name %><%= @event.admin.last_name %></div>
+        <div class="col-lg-4"><%= @event.admin.email %></div>
       </div>
     </div>
   </body>
