end_date added to show event

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,6 +22,11 @@
       </div>
 
       <div class="row">
+        <div class="col-sm-4">Date de fin :</div>
+        <div class="col-sm-4"><%= @event.find_end_date %></div>
+      </div>
+
+      <div class="row">
         <div class="col-md-4">Durée :</div>
         <div class="col-md-4"><%= @event.duration %></div>
       </div>
