--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -33,7 +33,7 @@
         </div>
         <div class="form-group">
           <%= label_tag 'Prix (entre 1 et 1000 euros)' %>
-          <%= text_field_tag 'start_date', @start_date, class: 'form-control' %>
+          <%= text_field_tag 'price', @price, class: 'form-control' %>
         </div>
         <div class="form-group">
           <%= label_tag 'Lieu' %>
