--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,28 +10,6 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
 
-body {
-
-	margin: 20px;
-}
-
-.jumbotron {
-	height: 500px;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.lead_title {
-
-  margin-top: 180px;
-}
-
-.row {
-	border: solid 1px;
-	margin: 10px;
-}
+ *=require freelancer
